# mura-xai-benchmark

./: .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN_v2.md  README.md  pyproject.toml  requirements.txt
configs/: densenet_gradcam.yaml  sweep.yaml
notebooks/: colab_run.ipynb  kaggle_run.ipynb
scripts/: aggregate_cis.py  check_repo.py  run_aggregation.py  run_agreement.py  run_experiment.py  run_reproducibility.py  run_robustness.py  run_stats.py  run_sweep.py  run_validation.py
src/xai_bench/: __init__.py  pipeline.py  seeds.py  utils.py
src/xai_bench/analysis/: __init__.py  aggregation.py  stats.py  validation.py
src/xai_bench/data/: __init__.py  mura.py
src/xai_bench/evaluation/: __init__.py  agreement.py  baseline_sensitivity.py  calibration.py  faithfulness.py  metrics.py  robustness.py
src/xai_bench/explainers/: __init__.py  _cam_utils.py  gradcam.py  gradcampp.py  integrated_gradients.py  layercam.py  scorecam.py  shap_grad.py
src/xai_bench/models/: __init__.py  backbones.py  train.py
src/xai_bench/reporting/: __init__.py  env_capture.py  results_db.py
tests/: test_smoke.py
